# prompt-codec

./: .gitignore  Cargo.toml  LICENSE  README.md  config.claude.yaml  config.example.yaml  config.glm.yaml  config.yaml
.github/workflows/: ci.yml  release.yml
contrib/: ai.prompt-codec.proxy.plist
contrib/hermes-agent/: README.md
contrib/hermes-agent/plugins/model-providers/prompt-codec/: __init__.py  plugin.yaml
docs/: model-ab.md  wren.md  x-launch.md
docs/superpowers/plans/: 2026-07-17-rust-rewrite.md  2026-07-18-v0.3.md
docs/superpowers/specs/: 2026-07-17-rust-rewrite-design.md  2026-07-18-v0.3-design.md  2026-07-19-dashboard-v2-design.md
legacy/: config.example.yaml  pyproject.toml
legacy/prompt_codec/: __init__.py  codec.py  proxy.py  tokens.py
prompt_codec/: cli.py  config.py  local_llm.py  rules.py
scripts/: ab_compare.sh  ab_models.sh  run_glm_demo.sh  run_proxy.sh  setup-mac.sh
src/: cache.rs  cli.rs  codec.rs  config.rs  dashboard.html  doctor.rs  lib.rs  llm.rs  main.rs  proxy.rs  rules.rs  stats.rs  telemetry.rs  tokenizer.rs
tests/: codec_test.rs  golden_test.rs  llm_test.rs  proxy_test.rs  test_rules.py
tests/corpus/: code_heavy.md  fluffy.txt  hermes_tool_turn.txt  tool_dump.json
