[package]
name = "prompt-codec"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4.6.2", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4.3"
moka = { version = "0.12.15", features = ["sync"] }
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha2 = "0.11.0"
tiktoken-rs = "0.12.0"
tokio = { version = "1.53.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
wiremock = "0.6.5"
